Fix spacing

--- a/website/static/website/css/main.css
+++ b/website/static/website/css/main.css
@@ -548,4 +548,7 @@ div.dropdown-submenu {
     #secondaryMenu {
         font-size: 80%;
     }
+    #LessonDropdown {
+        font-size: 80%;
+    }
 }
